--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -2,9 +2,40 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/viewContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="@dimen/screen_vertical_margin"
+    android:paddingStart="@dimen/screen_horizontal_margin"
+    android:paddingEnd="@dimen/screen_horizontal_margin"
+    android:paddingBottom="@dimen/screen_vertical_margin"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/headerLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pick your notification style"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <Spinner
+        android:id="@+id/notificationStyleSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/screen_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@id/headerLabel"
+        />
+
+    <TextView
+        android:id="@+id/detailsView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/screen_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@id/notificationStyleSpinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/launchView"
+        />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/launchView"
