--- a/sample/src/main/res/layout/activity_big_text_main.xml
+++ b/sample/src/main/res/layout/activity_big_text_main.xml
@@ -19,11 +19,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".handlers.BigTextMainActivity">
+    android:paddingBottom="@dimen/screen_vertical_margin"
+    android:paddingStart="@dimen/screen_horizontal_margin"
+    android:paddingEnd="@dimen/screen_horizontal_margin"
+    android:paddingTop="@dimen/screen_vertical_margin"
+    tools:context=".handler.BigTextMainActivity">
 
     <TextView
         android:layout_width="wrap_content"
