--- a/sample/src/main/res/layout/activity_inbox_main.xml
+++ b/sample/src/main/res/layout/activity_inbox_main.xml
@@ -19,20 +19,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".handlers.InboxMainActivity">
+    android:paddingBottom="@dimen/screen_vertical_margin"
+    android:paddingStart="@dimen/screen_horizontal_margin"
+    android:paddingEnd="@dimen/screen_horizontal_margin"
+    android:paddingTop="@dimen/screen_vertical_margin"
+    tools:context=".handler.InboxMainActivity">
 
     <TextView
+        android:id="@+id/mainTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/main_text_activity_inbox_main"
-        android:id="@+id/mainTextView"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:text="@string/main_text_activity_inbox_main" />
 
 </RelativeLayout>
